[fix] (ABC-617): Scrollbar hidden on drag

--- a/src/modules/base/kanban/kanban.css
+++ b/src/modules/base/kanban/kanban.css
@@ -135,10 +135,6 @@
     z-index: 1;
 }
 
-.avonni-kanban__dragging {
-    overflow: hidden;
-}
-
 .avonni-kanban__tile_icon {
     position: absolute;
     right: 3px;
@@ -209,6 +205,11 @@
 .avonni-kanban__container::-webkit-scrollbar-thumb,
 .avonni-kanban__tiles_container::-webkit-scrollbar-thumb {
     background: #dbdbdb;
+    border-radius: 5px;
+}
+
+.avonni-kanban__dragging.avonni-kanban__tiles_container::-webkit-scrollbar-thumb {
+    background: transparent;
     border-radius: 5px;
 }
 
